--- a/UI/style.css
+++ b/UI/style.css
@@ -21,30 +21,68 @@ nav {
     opacity: 0.9;
 }
 
-ul {
+nav ul {
     width: 80%;
     margin: 0 auto;
     padding: 0;
 }
 
-ul li {
+nav ul li {
     list-style: none;
     display: inline-block;
     padding: 20px;
 }
 
-ul li:hover {
+nav ul li:hover {
     background: #FA533C;
 }
 
-ul li a {
+nav ul li a {
     color: #fff;
     text-decoration: none;
     font-weight: bold;
     font-size: 14px;
 }
 
-p a {
+header,
+footer {
+    background: #00b4de;
+    color: #fbfbfb;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    text-align: center;
+    padding: 2em 0;
+}
+
+.main-columns {
+    width: 99.75%;
+    margin: 0 auto;
+    overflow: hidden;
+}
+
+.col {
+    width: 33.333%;
+    height: 500px;
+    float: left;
+    text-align: center;
+}
+
+.col1 {
+    background: #9bd5ff;
+}
+
+.col2 {
+    background: #ffd587;
+}
+
+.col3 {
+    background: #ff8787;
+}
+
+footer {
+    clear: both;
+}
+
+.wrap p a {
     color: #fff;
     font-weight: bold;
 }
@@ -74,6 +112,20 @@ p a {
     .active {
         display: block;
     }
+    .col1,
+    .col2 {
+        width: 50%;
+    }
+    .col3 {
+        width: 100%;
+    }
+}
+
+@media (max-width:480px) {
+    .col {
+        width: 100%;
+        float: none
+    }
 }
 
 .wrap {
@@ -88,12 +140,17 @@ p a {
     opacity: 0.9;
 }
 
+.flag {
+    max-width: 100%;
+    box-sizing: border-box;
+}
+
 h2 {
     text-align: center;
 }
 
-input[type=text],
-input[type=password] {
+.wrap input[type=text],
+.wrap input[type=password] {
     width: 100%;
     box-sizing: border-box;
     padding: 12px 5px;
@@ -106,7 +163,7 @@ input[type=password] {
     font-weight: bold;
 }
 
-input[type=submit] {
+.wrap input[type=submit] {
     width: 100%;
     box-sizing: border-box;
     padding: 10px 0;
@@ -125,4 +182,34 @@ input[type=submit]:hover {
     background: #8ED1D1;
     opacity: 0.7;
     cursor: pointer;
+}
+
+label {
+    float: left;
+    width: 150px;
+    text-align: right;
+    padding-right: 12px;
+    margin-top: 12px;
+    clear: left;
+}
+
+.flag input,
+textarea {
+    width: 40%;
+    margin-top: 12px;
+    box-sizing: border-box;
+    padding: 12px 5px;
+    border: none;
+    border-radius: 5px;
+    margin: 5px;
+    font-weight: bold;
+}
+
+#formSubmit {
+    margin-left: 150px;
+    padding: 15px;
+}
+
+#flagform {
+    width: 80%;
 }
