--- a/UI/style.css
+++ b/UI/style.css
@@ -46,11 +46,12 @@ nav ul li a {
 
 header,
 footer {
-    background: #00b4de;
-    color: #fbfbfb;
+    background: #47BFBE;
+    color: #292F34;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     text-align: center;
     padding: 2em 0;
+    height: 2%;
 }
 
 .main-columns {
@@ -61,21 +62,21 @@ footer {
 
 .col {
     width: 33.333%;
-    height: 500px;
+    height: 550px;
     float: left;
     text-align: center;
 }
 
 .col1 {
-    background: #9bd5ff;
+    background: #8ED1D1;
 }
 
 .col2 {
-    background: #ffd587;
+    background: #EADFD0;
 }
 
 .col3 {
-    background: #ff8787;
+    background: #FA533C;
 }
 
 footer {
@@ -178,7 +179,7 @@ h2 {
     font-weight: bold;
 }
 
-input[type=submit]:hover {
+.wrap input[type=submit]:hover {
     background: #8ED1D1;
     opacity: 0.7;
     cursor: pointer;
@@ -195,14 +196,41 @@ label {
 
 .flag input,
 textarea {
-    width: 40%;
+    width: 70%;
     margin-top: 12px;
     box-sizing: border-box;
+    background: #292F34;
     padding: 12px 5px;
     border: none;
     border-radius: 5px;
     margin: 5px;
+    color: #fff
+}
+
+.flag input[type=submit] {
+    width: 60%;
+    box-sizing: border-box;
+    padding: 10px 0;
+    margin-top: 30px;
+    outline: none;
+    border: none;
+    background: #FA533C;
+    opacity: 0.9;
+    border-radius: 20px;
+    font-size: 20px;
+    color: #fff;
     font-weight: bold;
+}
+
+.flag input[type=file] {
+    background: none !important;
+    border: none !important;
+}
+
+.flag input[type=submit]:hover {
+    background: #292F34;
+    opacity: 0.7;
+    cursor: pointer;
 }
 
 #formSubmit {
@@ -215,14 +243,14 @@ textarea {
 }
 
 .sidebar {
-    width: 300px;
+    width: 200px;
     height: 400px;
     background-color: #FA533C;
     float: left;
 }
 
 .data {
-    height: 700px;
+    height: 800px;
     background-color: #EADFD0
 }
 
@@ -235,4 +263,14 @@ textarea {
 .sidebar ul li:hover {
     background-color: #EADFD0;
     cursor: pointer;
+}
+
+table {
+    width: 80%;
+    height: 20%;
+    table-layout: auto;
+}
+
+td {
+    padding: 5px;
 }
