--- a/UI/style.css
+++ b/UI/style.css
@@ -254,6 +254,33 @@ table {
     padding: 20px;
 }
 
+#records th {
+    border: 0.5px solid #292F34;
+    padding: 9px;
+}
+
+#records th {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: #292F34;
+    color: #fff
+}
+
+#records select,
+#records button {
+    border: 1px solid rgb(204, 192, 176);
+    height: 30px;
+}
+
+table a {
+    text-decoration: none;
+    color: inherit;
+}
+
+table a:hover {
+    background-color: #FA533C;
+}
+
 td {
     padding: 5px;
     text-align: center;
