--- a/UI/style.css
+++ b/UI/style.css
@@ -44,6 +44,11 @@ nav ul li a {
     font-size: 14px;
 }
 
+nav ul #logout {
+    color: #fff;
+    float: right;
+}
+
 header,
 footer {
     background: #47BFBE;
@@ -192,6 +197,10 @@ label {
     padding-right: 12px;
     margin-top: 12px;
     clear: left;
+}
+
+.flag {
+    height: 700px;
 }
 
 .flag input,
